tests/test_assets/semantic/invalid/arrays/assignment_element_type.expected
semantic error at line 7: initializer type does not match declared type
1 semantic error generated.
